<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateActivity">

    <LinearLayout
        android:id="@+id/vg_headerTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/gradient_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/summary_subtitle_two"
            android:textAlignment="center"
            style="@style/Title_two"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_calculater"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_color"
        style="@style/Button"
        android:text="@string/button_calculate"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPrice"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAlcohol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="45dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vg_headerTwo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_price_alcohol"
            android:maxLength="5"
            android:drawableEnd="@drawable/ic_gas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:inputType="numberDecimal"
            android:hint="@string/text_alcohol_price"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutGasoline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintTextColor="@color/gold"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAlcohol">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_price_gas"
            android:maxLength="5"
            android:drawableEnd="@drawable/ic_gas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:inputType="numberDecimal"
            android:hint="@string/text_price_gasoline" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_group_two"
        style="@style/Input_Title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutGasoline" />

    <TextView
        android:id="@+id/textViewPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_group_one"
        style="@style/Input_Title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vg_headerTwo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutKMAlcohol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_km_alcohol"
            android:maxLength="5"
            android:drawableEnd="@drawable/ic_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:inputType="numberDecimal"
            android:hint="@string/text_alcohol_miles" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutKMGasoline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutKMAlcohol">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_km_gas"
            android:maxLength="5"
            android:drawableEnd="@drawable/ic_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:inputType="numberDecimal"
            android:hint="@string/text_gasoline_miles" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_group_three"
        style="@style/Input_Title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutKMGasoline" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_cash"
            android:maxLength="6"
            android:drawableEnd="@drawable/ic_cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:inputType="numberDecimal"
            android:hint="@string/text_value_supply" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>